[gd_scene load_steps=10 format=2]

[ext_resource path="res://ResourceTradeTab.gd" type="Script" id=1]
[ext_resource path="res://BasicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Bilder/Resource_Wood.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bilder/SimpleShieldInner.png" type="Texture" id=4]
[ext_resource path="res://SlinputSlider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Bilder/Pfeil.png" type="Texture" id=6]
[ext_resource path="res://BuySell.gd" type="Script" id=7]

[sub_resource type="StyleBoxLine" id=4]
resource_local_to_scene = true
color = Color( 0.277344, 0.257708, 0.255676, 1 )
thickness = 3

[sub_resource type="StyleBoxEmpty" id=5]

[node name="ResourceTradeTab" type="Container"]
margin_left = 11.0
margin_top = 6.0
margin_right = 1781.0
margin_bottom = 172.0
rect_min_size = Vector2( 1740, 150 )
script = ExtResource( 1 )

[node name="CityCount" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 40.0
margin_right = -1709.0
margin_bottom = -46.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Background" type="TextureRect" parent="."]
margin_left = 700.0
margin_top = -50.0
margin_right = 956.0
margin_bottom = 206.0
texture = ExtResource( 4 )

[node name="Resource" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 700.0
margin_top = -50.0
margin_right = -814.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="PlayerCount" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1711.0
margin_top = 40.0
margin_right = -28.0
margin_bottom = -46.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 85.0
margin_top = 170.0
margin_right = 1685.0
margin_bottom = 174.0
custom_styles/separator = SubResource( 4 )

[node name="CitySlider" parent="." instance=ExtResource( 5 )]

[node name="PlayerSlider" parent="." instance=ExtResource( 5 )]
margin_left = 950.0
margin_right = 1150.0

[node name="BuySell" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 770.0
margin_top = 50.0
margin_right = 1038.0
margin_bottom = 312.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/focus = SubResource( 5 )
icon = ExtResource( 6 )
flat = true
script = ExtResource( 7 )

[connection signal="value_changed" from="CitySlider" to="." method="_on_Slider_to_rule_them_all" binds= [ false ]]
[connection signal="value_changed" from="PlayerSlider" to="." method="_on_Slider_to_rule_them_all" binds= [ true ]]
[connection signal="buySell" from="BuySell" to="." method="_on_BuySell_buySell"]
[connection signal="pressed" from="BuySell" to="BuySell" method="_on_BuySell_pressed"]
